--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Noticias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale conosco</a>
+        <a href="#">Novidades</a>
+        <a href="#">Contactos</a>
     </nav>
 
     <main>
